# sirene

./: .dockerignore  .gitignore  LICENSE  README.md  TODO.md  biome.json  flake.nix  install.sh  package.json
.github/workflows/: desktop.yml  docker.yml  docs.yml  pr.yml
client/: index.html  package.json  vite.config.ts
client/src/: index.css  main.tsx  routeTree.gen.ts
db/: package.json
db/pb_migrations/: 1772782169_collections_snapshot.js  1777043712_studio_sessions.js  1777118329_fix_sessions_generations_multi.js  1777477114_collections_snapshot.js  1779000000_session_public_sharing.js  1779100000_inference_servers.js  1779100001_inference_servers_name_unique.js  1779200000_inference_servers_auth_token.js  1779300000_users_is_admin.js
desktop/: .gitignore  electrobun.config.ts  package.json  tsconfig.json
desktop/scripts/: download-pocketbase.sh  (+1 more)
docker/: Dockerfile  Dockerfile.inference  docker-compose.cuda.yml  docker-compose.yml  entrypoint.sh  nginx.conf  supervisord.conf
docs/: index.md  package.json
inference/: overrides.txt  package.json  pyproject.toml  setup.sh
inference/src/: config.py  main.py  schemas.py
inference/src/backends/: base.py  chatterbox.py  cosyvoice.py  deps.py  f5tts.py  fish_audio.py  higgs_audio.py  kokoro.py  openaudio.py  piper.py  qwen.py  registry.py  voxtral.py
inference/src/routers/: backends.py  cache.py  generate.py  health.py  models.py  transcribe.py
inference/src/services/: audio.py  downloader.py  model_manager.py  prompt_cache.py  ssml.py
server/: package.json
shared/: package.json
(+195 files in other folders)
